Adding RuntimeIdentifier and PlatformTarget to the TwitterCLI.proj for publish.

--- a/TwitterCLI/TwitterCLI.csproj
+++ b/TwitterCLI/TwitterCLI.csproj
@@ -6,6 +6,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<UserSecretsId>bfe36c87-449f-4cea-92c0-1a6fa52a8a8d</UserSecretsId>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
