--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build -c Release --no-restore
+      run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish TwitterCLI -c Release /p:PublishSingleFile=true --output Artifacts --no-build
+      run: dotnet publish TwitterCLI -c Release /p:PublishSingleFile=true --output Artifacts
     - name: Upload
       uses: actions/upload-artifact@v2
       with: 
