--- a/TwitterCLI/TwitterCLI.csproj
+++ b/TwitterCLI/TwitterCLI.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
 		<PackageReference Include="Spectre.Console" Version="0.45.0" />
 		<PackageReference Include="Spectre.Console.Extensions.Table" Version="1.0.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
 		<PackageReference Include="TweetinviAPI" Version="5.0.4" />
 	</ItemGroup>
 
