--- a/TwitterCLI/TwitterCLI.csproj
+++ b/TwitterCLI/TwitterCLI.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
 		<PackageReference Include="Spectre.Console" Version="0.45.0" />
 		<PackageReference Include="Spectre.Console.Cli" Version="0.45.0" />
 		<PackageReference Include="Spectre.Console.Extensions.Hosting" Version="0.2.0" />
